Dark mode logo invisible fixed.

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1182,3 +1182,6 @@
   margin-bottom: 16px;
 
 }
+#discord-mobile-menu-logo{
+  color: #000;
+}
